k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coinbuck-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "50"
    nginx.ingress.kubernetes.io/limit-rps: "25"
spec:
  rules:
    - host: coinbuck.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coinbuck-svc
                port:
                  number: 80
